Sending replies and likes count details