@@ -1,5 +1,6 @@
 package com.service.comments.service.impl;
 
+import com.service.comments.dto.CommentResponse;
 import com.service.comments.dto.request.CommentRequestDto;
 import com.service.comments.dto.EntityResponseDto;
 import com.service.comments.dto.request.ReactRequestDto;
@@ -8,6 +9,7 @@ import com.service.comments.exception.custom.InvalidReactionTypeException;
 import com.service.comments.models.Comment;
 import com.service.comments.models.Reaction;
 import com.service.comments.models.User;
+import com.service.comments.models.enums.ReactType;
 import com.service.comments.repository.CommentRepository;
 import com.service.comments.repository.ReactRepository;
 import com.service.comments.repository.UserRepository;
@@ -18,6 +20,8 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 
@@ -25,8 +29,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -48,108 +51,109 @@ public class CommentsServiceImplTest {
   private CommentsServiceImpl commentsService;
 
   private CommentRequestDto commentRequestDto;
-  private ReactRequestDto reactRequestDto;
   private Comment comment;
+  private ReactRequestDto reactRequestDto;
+  private User user;
 
   @BeforeEach
-  public void setup() {
+  void setUp() {
     commentRequestDto = new CommentRequestDto();
     commentRequestDto.setPostId(1L);
-    commentRequestDto.setComment("Test comment");
+    commentRequestDto.setComment("This is a test comment");
     commentRequestDto.setUserId(1L);
-    commentRequestDto.setParentCommentId(1L);
+    commentRequestDto.setParentCommentId(null);
+
+    comment = new Comment();
+    comment.setCommentId(1L);
+    comment.setCommentDesc("This is a test comment");
 
     reactRequestDto = new ReactRequestDto();
     reactRequestDto.setReactType("LIKE");
     reactRequestDto.setUserId(1L);
 
-    comment = new Comment();
-    comment.setCommentId(1L);
-    comment.setCommentDesc("Test comment");
+    user = new User();
+    user.setUserId(1L);
   }
 
   @Test
-  public void testAddComment_ShouldReturnEntityResponseDto_WhenCommentIsAdded() {
+  void testAddComment() throws CommentNotFoundException {
     when(commentRepository.save(any(Comment.class))).thenReturn(comment);
 
     EntityResponseDto response = commentsService.addComment(commentRequestDto);
 
-    assertEquals(comment.getCommentId(), response.getCommentId());
-    verify(commentServiceValidator, times(1))
-        .validateCommentId(commentRequestDto.getParentCommentId());
+    assertNotNull(response);
+    assertEquals(1L, response.getCommentId());
+    verify(commentServiceValidator, never()).validateCommentId(anyLong());
     verify(commentRepository, times(1)).save(any(Comment.class));
   }
 
   @Test
-  public void testAddReact_ShouldThrowCommentNotFoundException_WhenCommentIdIsInvalid() {
-    doThrow(CommentNotFoundException.class).when(commentServiceValidator).validateCommentId(2L);
+  void testAddCommentWithParentId() throws CommentNotFoundException {
+    commentRequestDto.setParentCommentId(2L);
+    when(commentRepository.save(any(Comment.class))).thenReturn(comment);
 
-    assertThrows(CommentNotFoundException.class, () -> {
-      commentsService.addReact(2L, reactRequestDto);
-    });
+    EntityResponseDto response = commentsService.addComment(commentRequestDto);
 
+    assertNotNull(response);
+    assertEquals(1L, response.getCommentId());
     verify(commentServiceValidator, times(1)).validateCommentId(2L);
+    verify(commentRepository, times(1)).save(any(Comment.class));
   }
 
   @Test
-  public void testAddReact_ShouldThrowInvalidReactionTypeException_WhenReactTypeIsInvalid() {
-    reactRequestDto.setReactType("INVALID");
+  void testAddReact() throws CommentNotFoundException, InvalidReactionTypeException {
+    doNothing().when(commentServiceValidator).validateReactionType(anyString());
+    doNothing().when(commentServiceValidator).validateCommentId(anyLong());
 
-    doThrow(InvalidReactionTypeException.class).when(commentServiceValidator)
-        .validateReactionType("INVALID");
+    commentsService.addReact(1L, reactRequestDto);
 
-    assertThrows(InvalidReactionTypeException.class, () -> {
-      commentsService.addReact(1L, reactRequestDto);
-    });
-
-    verify(commentServiceValidator, times(1)).validateReactionType("INVALID");
-  }
-
-  @Test
-  public void testGetRepliesForComments_ShouldReturnListOfComments_WhenParentCommentIdIsValid() {
-    when(commentRepository.findByParentCommentId(1L, PageRequest.of(0, 5)))
-        .thenReturn(List.of(comment));
-
-    List<Comment> replies = commentsService.getRepliesForComments(1L, 0, 5);
-
-    assertEquals(1, replies.size());
-    assertEquals(comment.getCommentDesc(), replies.get(0).getCommentDesc());
+    verify(commentServiceValidator, times(1)).validateReactionType("LIKE");
     verify(commentServiceValidator, times(1)).validateCommentId(1L);
-    verify(commentRepository, times(1)).findByParentCommentId(1L, PageRequest.of(0, 5));
+    verify(reactRepository, times(1)).save(any(Reaction.class));
   }
 
   @Test
-  public void testGetRepliesForComments_ShouldThrowCommentNotFoundException_WhenParentCommentIdIsInvalid() {
-    doThrow(CommentNotFoundException.class).when(commentServiceValidator).validateCommentId(2L);
+  void testGetCommentsWithoutParentId() throws CommentNotFoundException {
+    Page<Comment> commentPage = new PageImpl<>(Collections.singletonList(comment));
+    when(commentRepository.findByParentCommentIdIsNull(any(Pageable.class)))
+        .thenReturn(commentPage);
 
-    assertThrows(CommentNotFoundException.class, () -> {
-      commentsService.getRepliesForComments(2L, 0, 5);
-    });
+    CommentResponse response = commentsService.getComments(null, 0, 10);
 
+    assertNotNull(response);
+    assertEquals(1, response.getComments().size());
+    assertEquals(1, response.getTotalCount());
+    verify(commentRepository, times(1)).findByParentCommentIdIsNull(any(Pageable.class));
+  }
+
+  @Test
+  void testGetCommentsWithParentId() throws CommentNotFoundException {
+    Page<Comment> commentPage = new PageImpl<>(Collections.singletonList(comment));
+    when(commentRepository.findByParentCommentId(anyLong(), any(Pageable.class)))
+        .thenReturn(commentPage);
+
+    CommentResponse response = commentsService.getComments(2L, 0, 10);
+
+    assertNotNull(response);
+    assertEquals(1, response.getComments().size());
+    assertEquals(1, response.getTotalCount());
     verify(commentServiceValidator, times(1)).validateCommentId(2L);
+    verify(commentRepository, times(1)).findByParentCommentId(anyLong(), any(Pageable.class));
   }
 
   @Test
-  public void testGetUsersWrtReactType_ShouldReturnListOfUsers_WhenReactTypeIsValid() {
-    User user = new User();
-    user.setUserId(1L);
-    when(userRepository.findUsersByReactionAndCommentId("LIKE", 1L)).thenReturn(List.of(user));
+  void testGetUsersWrtReactType() {
+    when(userRepository.findUsersByReactionAndCommentId(anyString(), anyLong()))
+        .thenReturn(Collections.singletonList(user));
 
     List<User> users = commentsService.getUsersWrtReactType(1L, "LIKE");
 
+    assertNotNull(users);
     assertEquals(1, users.size());
     assertEquals(1L, users.get(0).getUserId());
-  }
+    verify(commentServiceValidator, times(1)).validateReactionType("LIKE");
+    verify(userRepository, times(1)).findUsersByReactionAndCommentId("LIKE", 1L);
 
-  @Test
-  public void testGetUsersWrtReactType_ShouldThrowInvalidReactionTypeException_WhenReactTypeIsInvalid() {
-    doThrow(InvalidReactionTypeException.class).when(commentServiceValidator)
-        .validateReactionType("INVALID");
 
-    assertThrows(InvalidReactionTypeException.class, () -> {
-      commentsService.getUsersWrtReactType(1L, "INVALID");
-    });
-
-    verify(commentServiceValidator, times(1)).validateReactionType("INVALID");
   }
 }
